feat: 놓친 프로모션 만큼 상품 가져오기
- 물어보고 Y이면 놓친 프로모션 만큼 상품 가져오기
- 놓친 상품 종류가 여러 종류일 때도 고려함
- 제고에 프로모션 상품이 부족할 때는 아직 예외 처리 안 함